fix(styles): remove rounded border from navbar
Bootstrap now has a `border-radius: 4px` applied to the `.navbar` which
makes the main menu look odd. This has been removeed now.

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -46,6 +46,7 @@ a:hover {
   margin-bottom: 0px;
   min-height: 80px;
   border: none;
+  border-radius: 0px;
 }
 
 .navbar-collapse {
